--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,6 +11,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".activities.LoginActivity">
 
+    <ImageView android:src="@mipmap/ic_launcher"
+        android:layout_width="wrap_content"
+        android:layout_height="72dp"
+        android:layout_marginBottom="24dp"
+        android:layout_gravity="center_horizontal" />
     <!-- Login progress -->
     <ProgressBar
         android:id="@+id/login_progress"
